about/resource-validation/enable-resource-validation/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: faults-routeoption-test
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: gateway.solo.io/v1
          kind: RouteOption
          metadata:
            name: faults
            namespace: httpbin
          spec:
            options:
              faults:
                abort:
                  percentage: 50
        expect:
        - check:
            ($error != null): true
